dead/test/invalid/no_semi.c
// this is a single line comment
/*
// this is a comment block
*/
int main() {
    return 2
}
